# RemoteToolbox

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHAT_ADAPTERS.md  CONFIGURATION.md  DEPLOYMENT.md  GLOSSARY.md  MANAGING_TOOLS.md  README.md  REFERENCE.md  SECURITY.md  WRITING_TOOLS.md
examples/tools-repo/: .gitignore  CHANGELOG.md  README.md
examples/tools-repo/hello/: tool.py
examples/tools/hello/: README.md  tool.py
examples/tools/proactive/: tool.py
examples/tools/system_info/: tool.py
qa/: E-security-review.md  F-extender.md  README.md
src/remotetoolbox/: __init__.py  __main__.py  config.py  doctor.py  messaging.py  orchestrator.py  registry.py  scaffold.py
src/remotetoolbox/chat/: __init__.py  base.py  console.py  telegram.py
src/remotetoolbox/llm/: __init__.py  base.py  ollama.py
src/remotetoolbox/tooling/: __init__.py  loader.py  mcp_client.py
tests/: test_docs_sync.py  test_doctor.py  test_examples.py  test_loader.py  test_messaging.py  test_ollama.py  test_orchestrator.py  test_registry.py  test_scaffold.py  test_startup.py  test_telegram.py
tools/: README.md
